--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -38,15 +39,17 @@
     "react-native-web": "0.17.1",
     "react-redux": "^8.0.0",
     "redux": "^4.1.2",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.13.0",
     "eslint-plugin-react": "^7.29.4",
     "jest": "^26.6.3",
