--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "indent": ["error", 4],
         "semi": ["warn", "always"],
         "quotes": ["warn", "double"],
-        "comma-spacing": ["warn", { "before": false, "after": true }]
+        "comma-spacing": ["warn", { "before": false, "after": true }],
+        "arrow-body-style": ["error", "as-needed"]
     }
 }
