--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@hookform/resolvers": "^3.1.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/slider": "4.2.3",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -34,13 +36,16 @@
     "react": "18.0.0",
     "react-async": "^10.0.1",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.43.9",
     "react-native": "0.69.9",
+    "react-native-color-picker": "^0.6.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.0",
     "redux": "^4.1.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
