--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/slider": "4.4.2",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -39,14 +40,14 @@
     "react-hook-form": "^7.45.0",
     "react-native": "0.71.3",
     "react-native-color-picker": "^0.6.0",
+    "react-native-picker-select": "^9.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.0",
     "redux": "^4.1.2",
     "styled-components": "^5.3.5",
-    "yup": "^1.1.1",
-    "@react-native-picker/picker": "2.4.8"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
